# tasks-cpp

./: .gitignore  CMakeLists.txt
employeedb/: CMakeLists.txt
employeedb/src/: main.cpp
sensor/: CMakeLists.txt
sensor/include/: IDigitalSensor.h  ISensor.h
sensor/src/: PressureSensor.cpp  main.cpp
taskscpp/: CMakeLists.txt  taskscpp.cpp  taskscpp.h
trucks/: CMakeLists.txt
trucks/include/: CarManager.h  DateTime.h  datacar.h  main.h  util.h
trucks/src/: CarManager.cpp  DateTime.cpp  datacar.cpp  main.cpp  util.cpp
